Initial commit: ML Colab Agentic template repository
- Add complete directory structure (src, tests, notebooks, .github)
- Add core Python utilities (set_seed, to_device) with smoke tests
- Add starter Jupyter notebook with GPU check and PyTorch demo
- Add GitHub Actions CI/CD workflow for notebook smoke testing
- Add DevContainer configuration for GitHub Codespaces
- Add comprehensive documentation (README, CONTRIBUTING, SECURITY, CODE_OF_CONDUCT)
- Add project metadata (pyproject.toml, requirements.txt, .editorconfig)
- Add issue and PR templates for structured collaboration
- Add AGENT_MISSIONS.md with ready-to-use Copilot Chat prompts
- Set MIT license and Keep a Changelog format

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,7 @@
 {
   "name": "ml-colab-agentic",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "features": { "ghcr.io/devcontainers/features/common-utils:2": {} },
-  "postCreateCommand": "pip install -r requirements.txt jupyter ipykernel",
+  "postCreateCommand": "pip install -r requirements.txt jupyter ipykernel pytest ruff black",
   "customizations": {
     "vscode": {
       "extensions": [
