--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,15 @@ target-version = ["py311"]
 [tool.ruff]
 line-length = 100
 target-version = "py311"
-extend-select = ["I", "UP"]
 exclude = [
   ".git",
   "__pycache__",
   ".venv",
   ".ipynb_checkpoints",
 ]
+
+[tool.ruff.lint]
+extend-select = ["I", "UP"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
