--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ __pycache__/
 # Jupyter/Colab
 .ipynb_checkpoints/
 *.checkpoint.ipynb
-# Outputs & large data
-data/
-outputs/
-checkpoints/
-logs/
+# # Outputs & large data
+# data/
+# outputs/
+# checkpoints/
+# logs/
 
 # OS
 .DS_Store
