--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@ __pycache__/
 
 # Data & runs
 data/
-runs/*
-!runs/2025-01-01_00-00_example_dataset_example_model/
+runs
 outputs/
 checkpoints/
 
