--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ __pycache__/
 **/.ipynb_checkpoints
 
 # Cloud-stored runtime data (lives in Google Drive)
-data/
-!data/README.md
-# runs/
-# outputs/
+# data/
+# !data/README.md
+runs/
+outputs/
 checkpoints/
 
 # Model & array blobs
